--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "express": "~3.4.7",
     "ejs": "~0.8.5",
     "bower": "~1.2.8"
+  },
+  "scripts": {
+    "install": "node node_modules/protractor/bin/webdriver-manager update"
   }
 }
