--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,8 @@
     "angular": "~1.2.8",
     "angular-animate": "~1.2.8",
     "angular-route": "~1.2.8"
+  },
+  "resolutions": {
+    "angular": "~1.2.8"
   }
 }
