--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "bootstrap": "~3.0.3",
     "angular": "~1.2.8",
     "angular-animate": "~1.2.8",
-    "angular-route": "~1.2.8"
+    "angular-route": "~1.2.8",
+    "underscore": "~1.7.0"
   },
   "resolutions": {
     "angular": "~1.2.8"
